@@ -1,11 +1,11 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 7,
   "clones": [
     {
       "timestamp": "2023-07-25T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-07-26T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2023-08-06T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-08-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
