@@ -1,3 +1,12 @@
+2023-08-08T08:18:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5794496077 # 1063
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
+* notice: last 14d: unq all: 7 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 574 917 / 594 947
+* notice: next accum: outdated-unq outdated-all / unq all: 574 917 / 595 948
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-25 2023-08-08]
+
 2023-08-07T16:19:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5787496859 # 1061
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
